# src/api_service/api/operations/links/update_link.go
@@ -6,12 +6,9 @@ package links
 // Editing this file might prove futile when you re-run the generate command
 
 import (
-	"context"
 	"net/http"
 
 	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
 )
 
 // UpdateLinkHandlerFunc turns a function with the right signature into a update link handler
@@ -71,47 +68,4 @@ func (o *UpdateLink) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	res := o.Handler.Handle(Params, principal) // actually handle the request
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
-}
-
-// UpdateLinkOKBody update link o k body
-//
-// swagger:model UpdateLinkOKBody
-type UpdateLinkOKBody struct {
-
-	// long url
-	LongURL string `json:"long_url,omitempty"`
-
-	// status
-	Status string `json:"status,omitempty"`
-
-	// tracking status
-	TrackingStatus string `json:"tracking_status,omitempty"`
-}
-
-// Validate validates this update link o k body
-func (o *UpdateLinkOKBody) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this update link o k body based on context it is used
-func (o *UpdateLinkOKBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (o *UpdateLinkOKBody) MarshalBinary() ([]byte, error) {
-	if o == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(o)
-}
-
-// UnmarshalBinary interface implementation
-func (o *UpdateLinkOKBody) UnmarshalBinary(b []byte) error {
-	var res UpdateLinkOKBody
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*o = res
-	return nil
 }
